
(2) BoxSet and BoxList have been merged into BoxContainer.

(3) Internal representation of Connector is now encapsulated behind an abstract
    API.

(4) The ceiling methods in IntVector have been renamed ceilingDivide.

(5) Operations to remove periodic image boxes now work on this.

(6) Constructing SAMRAI_MPI with MPI_COMM_NULL sets rank and size
    to invalid values.



*****************************************************************************

-----------------------------------------------------------------------------
                Details about what's new
-----------------------------------------------------------------------------

(1) Reduced memory usage.

Algorithmic improvements and the use of BoxContainer in lieu of BoxSet and/or
BoxList have drastically reduced the number of Box creations and assignments
especially for multi-block.  In addition the number of Boxes in existence at
any time has also been drastically reduced especially for multi-block.

QUOTE SOME NUMBERS HERE

(2) Better execution times.

Larely due to the reduction in object creation/copying execution time has
improved.

QUOTE SOME NUMBERS HERE

(3) The bridge algorithm is now multi-block aware.

NEED SOME DETAILS

(4) CoarsenAlgorithm and CoarsenSchedule are multi-block aware.

MultiblockCoarsenAlgorithm and MultiblockCoarsenSchedule have been removed from
the library, and CoarsenAlgorithm and CoarsenSchedule are now capable of
handling coarsening operations for multi-block configurations.

(5) RefineSchedule construction performance has been improved.

NEED SOME DETAILS

-----------------------------------------------------------------------------
                Details about what's changed
-----------------------------------------------------------------------------

(1) MappedBox has been merged into Box.

There is no longer a class called MappedBox.

All Boxes now have a BoxId.

"Unmapped" Boxes have an invalid BoxId.
