@@ -61,7 +61,7 @@
 #undef HAVE_BLAS
 
 /* BOOST headers are available to use */
-#undef HAVE_BOOST
+#undef HAVE_BOOST_HEADERS
 
 /* HAVE_CMATH */
 #undef HAVE_CMATH
