@@ -12,6 +12,9 @@
 #define included_pdat_SparseDataVariable_C
 
 #include "SAMRAI/pdat/SparseDataVariable.h"
+
+#ifdef HAVE_BOOST_HEADERS
+
 #include "SAMRAI/pdat/SparseDataFactory.h"
 
 namespace SAMRAI {
@@ -38,4 +41,5 @@ SparseDataVariable<BOX_GEOMETRY>::~SparseDataVariable()
 
 } // end namespace pdat
 } // end namespace SAMRAI
+#endif
 #endif
