@@ -29,12 +29,15 @@ SparseDataTester::SparseDataTester(
 }
 
 SparseDataTester::~SparseDataTester() {
+#ifdef HAVE_BOOST_HEADERS
    d_sparse_data->clear();
+#endif
 }
 
 bool
 SparseDataTester::testConstruction()
 {
+#ifdef HAVE_BOOST_HEADERS
    hier::Index lo = hier::Index(d_dim, 0);
    hier::Index hi = hier::Index(d_dim, 100);
    hier::Box box(lo, hi);
@@ -73,11 +76,15 @@ SparseDataTester::testConstruction()
 
    d_sparse_data->clear();
    return passed;
+#else
+   return true;
+#endif
 }
 
 bool
 SparseDataTester::testCopy()
 {
+#ifdef HAVE_BOOST_HEADERS
 
    //_fillObject(d_sparse_data);
 
@@ -89,11 +96,15 @@ SparseDataTester::testCopy()
    d_sparse_data->clear();
    sample->clear();
    return success;
+#else
+   return true;
+#endif
 }
 
 bool
 SparseDataTester::testCopy2()
 {
+#ifdef HAVE_BOOST_HEADERS
    // ensure the tester's copy of d_sparse_data is empty before
    // we start
    d_sparse_data->clear();
@@ -105,12 +116,16 @@ SparseDataTester::testCopy2()
    d_sparse_data->clear();
    sample->clear();
    return success;
+#else
+   return true;
+#endif
 }
 
 bool
 SparseDataTester::testAdd()
 {
    bool success = true;
+#ifdef HAVE_BOOST_HEADERS
    tbox::Pointer<SparseDataType> sample = _createEmptySparseData();
 
    success = success && (sample->empty() ? true : false);
@@ -122,12 +137,14 @@ SparseDataTester::testAdd()
       sample->clear();
 
    success = success && (sample->empty() ? true : false);
+#endif
    return success;
 }
 
 bool
 SparseDataTester::testRemove()
 {
+#ifdef HAVE_BOOST_HEADERS
    tbox::Pointer<SparseDataType> sample = _createEmptySparseData();
    _fillObject(sample);
    bool success = (!sample->empty() ? true : false);
@@ -152,32 +169,16 @@ SparseDataTester::testRemove()
    }
 
    return success;
-}
-
-bool
-SparseDataTester::_testCopy(
-   tbox::Pointer<SparseDataType> src,
-   tbox::Pointer<SparseDataType> dst)
-{
-   src->copy(*dst);
-   TBOX_ASSERT(src->size() == dst->size());
-   pdat::SparseData<pdat::CellGeometry>::Iterator me(src);
-   pdat::SparseData<pdat::CellGeometry>::Iterator me_end = src->end();
-   pdat::SparseData<pdat::CellGeometry>::Iterator other(dst);
-
-   bool success = true;
-   for ( ; me != me_end && success != false; ++me, ++other) {
-      if (me != other) {
-         success = false;
-      }
-   }
-   return success;
+#else
+   return true;
+#endif
 }
 
 bool
 SparseDataTester::testPackStream()
 {
    bool success = true;
+#ifdef HAVE_BOOST_HEADERS
 
    tbox::Pointer<SparseDataType> sample = _createEmptySparseData();
    _fillObject(sample);
@@ -229,6 +230,7 @@ SparseDataTester::testPackStream()
    }
    sample->clear();
    sample2->clear();
+#endif
    return success;
 }
 
@@ -236,6 +238,7 @@ bool
 SparseDataTester::testDatabaseInterface()
 {
    bool success = true;
+#ifdef HAVE_BOOST_HEADERS
 
    tbox::Pointer<SparseDataType> sample = _createEmptySparseData();
    _fillObject(sample);
@@ -257,12 +260,15 @@ SparseDataTester::testDatabaseInterface()
 
    sample->clear();
    sample2->clear();
+#endif
    return success;
 }
+
 
 void
 SparseDataTester::testTiming()
 {
+#ifdef HAVE_BOOST_HEADERS
    tbox::Pointer<tbox::Timer> timer =
       tbox::TimerManager::getManager()->getTimer("SparseDataAddItem", true);
 
@@ -297,7 +303,34 @@ SparseDataTester::testTiming()
               << timer->getTotalWallclockTime() << std::endl;
    tbox::plog << "End Timing" << std::endl;
    sample->clear();
+#endif
 }
+
+
+
+#ifdef HAVE_BOOST_HEADERS
+
+
+bool
+SparseDataTester::_testCopy(
+   tbox::Pointer<SparseDataType> src,
+   tbox::Pointer<SparseDataType> dst)
+{
+   bool success = true;
+   src->copy(*dst);
+   TBOX_ASSERT(src->size() == dst->size());
+   pdat::SparseData<pdat::CellGeometry>::Iterator me(src);
+   pdat::SparseData<pdat::CellGeometry>::Iterator me_end = src->end();
+   pdat::SparseData<pdat::CellGeometry>::Iterator other(dst);
+
+   for ( ; me != me_end && success != false; ++me, ++other) {
+      if (me != other) {
+         success = false;
+      }
+   }
+   return success;
+}
+
 
 hier::Index
 SparseDataTester::_getRandomIndex()
@@ -388,4 +421,7 @@ SparseDataTester::_getIntValues(int* values)
       values[i] = i;
    }
 }
+
+#endif
+
 } // end namespace sam_test
