@@ -54,8 +54,14 @@ private:
    static const int DSIZE = 7;
    static const int ISIZE = 3;
 
+#ifdef HAVE_BOOST_HEADERS
    typedef pdat::SparseData<pdat::CellGeometry> SparseDataType;
+#else
+   // Dummy type declaraion.
+   typedef int SparseDataType;
+#endif
 
+#ifdef HAVE_BOOST_HEADERS
    void
    _fillObject(
       tbox::Pointer<SparseDataType> sparse_data);
@@ -81,6 +87,7 @@ private:
    _getRandomIndex();
 
    tbox::Pointer<SparseDataType> d_sparse_data;
+#endif
 
    bool d_initialized;
    tbox::Dimension d_dim;
