@@ -46,9 +46,11 @@ int main(
 
    PIO::logAllNodes(log_name);
 
+   int fail_count = 0;
+#ifdef HAVE_BOOST_HEADERS
+
    // Need scope for tester object so it will be destroyed
    // and cleaned up before SAMRAI finalize is called.
-   int fail_count = 0;
    {
       SparseDataTester tester(dim);
 
@@ -120,11 +122,13 @@ int main(
          }
 
          tester.testTiming();
-
-         if (fail_count == 0) {
-            tbox::pout << "\nPASSED:  sparse data test" << std::endl;
-         }
       }
+   }
+
+#endif
+
+   if (fail_count == 0) {
+      tbox::pout << "\nPASSED:  sparse data test" << std::endl;
    }
 
    SAMRAIManager::shutdown();
